--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.MyApplication">
-        <activity android:name=".Result"></activity>
+        <activity android:name=".ResultActivity"></activity>
         <activity android:name=".AnswerActivity" />
         <activity android:name=".MainActivity">
             <intent-filter>
